--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,8 @@ p {
   height: 150px;
   width: 96%;
   margin: auto;
-  background-color: #EAF2F6;
+  background-color: inherit;
   border-radius: 10px;
-  border: 1px solid #000;
 }
 
 .gifBox {
@@ -64,7 +63,6 @@ p {
   height: 150px;
   width: 96%;
   margin: 20px auto;
-  background-color: #EAF2F6;
+  background-color: inherit;
   border-radius: 0px;
-  border: 1px solid #000;
 }
